# agentic-honeypot

./: .env.example  .flake8  .gitignore  CONTRIBUTING.md  PROJECT_STATE.md  README.md  pyproject.toml  recover_tarpit.py  requirements-lock.txt  requirements.txt
.github/workflows/: test.yml
agents/: __init__.py  base_client.py  concurrent_orchestrator.py  human_sim.py  llm_agent.py  orchestrator.py  script_bot.py
analysis/: eda.py
api/app/: config.py  db.py  logger.py  main.py  middleware.py  sanitizer.py
api/tests/: test_db_init.py  test_endpoints.py  test_health.py  test_security.py  test_seed.py  test_simulation.py  test_telemetry.py
features/: engineering.py  etl.py  pipeline.py
features/tests/: test_etl.py  test_features.py  test_pipeline.py
models/: classifiers.py  robustness.py
models/tests/: test_classifiers.py  test_robustness.py
report/: architecture.md  threat_model.md
report/metrics/: ablation_results.json  lr_results.json  rf_results.json  robustness_concurrent.json  robustness_ood_model.json  robustness_ood_prompt.json  robustness_results.json  robustness_tarpit.json
scripts/: make.ps1
